<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">Osynda</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <!--TODO ENTER YOUR APP ID BELOW-->
    <string name="facebook_app_id"/>
    <!--TODO ENTER YOUR APP ID BELOW (eg: fb0123456789)-->
    <string name="fb_login_protocol_scheme">fb</string>
    <!--TODO ENTER YOUR Client Token BELOW-->
    <string name="facebook_client_token"/>
<string name="lbl_jun">Jun</string>
  <string name="msg_johnny_silverha">Johnny Silverhand</string>
  <string name="lbl_feb">Feb</string>
  <string name="lbl_continue">Continue</string>
  <string name="msg_email_mariamna">email: mariamnabill022@gmail.com</string>
  <string name="lbl_judy_alvarez">Judy Alvarez</string>
  <string name="lbl_35_00">$35.00</string>
  <string name="msg_join_us_for_an">"Join us for an immersive and thought-provoking discussion about Cyberpunk 2077, the groundbreaking video game that has captivated millions of players worldwide. Our expert panelists will delve into the game's rich lore, explore its complex themes, and analyze its impact on the cyberpunk genre."</string>
  <string name="msg_location_nasr">Location: Nasr city,cairo                         </string>
  <string name="lbl_email_address">Email Address</string>
  <string name="lbl_event_tickets">Event Tickets</string>
  <string name="lbl2">/</string>
  <string name="lbl3">\u2022\u2022\u2022\u2022\u2022</string>
  <string name="lbl_taxes">Taxes</string>
  <string name="msg_log_in_with_fac">Log in with facebook</string>
  <string name="lbl_or_login_with">Or Login With</string>
  <string name="lbl_home">Home</string>
  <string name="lbl_jane_perry">Jane Perry</string>
  <string name="msg_already_have_an">Already have an account ? </string>
  <string name="lbl_1_ticket">1 Ticket</string>
  <string name="lbl_xxx">xxx</string>
  <string name="msg_cyberpunk_20772">Cyberpunk 2077: A Journey into the Neon Abyss</string>
  <string name="lbl_phone_number">Phone Number</string>
  <string name="lbl_sh3_2323_42ssa">SH3-2323-42SSA</string>
  <string name="msg_ticket_informat">Ticket information</string>
  <string name="lbl_speakers">Speakers</string>
  <string name="msg_beyond_the_surf">Beyond the Surface: Exploring Depth in Art</string>
  <string name="lbl_art">art</string>
  <string name="lbl_ticket_id">Ticket ID</string>
  <string name="msg_card_visa_mas">Card (Visa, MasterCard)</string>
  <string name="lbl_edit">Edit</string>
  <string name="lbl_work">Work</string>
  <string name="lbl_nearby_events">Nearby events</string>
  <string name="lbl_mariam_nabil">Mariam Nabil</string>
  <string name="msg_card_number_4">Card number...4498</string>
  <string name="lbl_see_your_ticket">See your ticket</string>
  <string name="msg_yayoi_kusama_i">YAYOI KUSAMA: INFINITY MIRROR ROOMS</string>
  <string name="lbl_price">Price</string>
  <string name="lbl_organized_by">Organized by </string>
  <string name="lbl_panam_palmer">panam palmer</string>
  <string name="lbl_sear">Sear</string>
  <string name="lbl_forgot">Forgot?</string>
  <string name="lbl_gaming">Gaming</string>
  <string name="msg_novel_notions_e">Novel Notions Expo</string>
  <string name="lbl_social">Social </string>
  <string name="lbl_seat">Seat</string>
  <string name="lbl_about_the_event">About the event</string>
  <string name="msg_panel_discuss">: Panel Discussion: Exploring the Cyberpunk 2077 Universe</string>
  <string name="msg_name_mariam_n">name : Mariam Nabil</string>
  <string name="lbl_gaming2">gaming</string>
  <string name="lbl_gaming3">GAMING</string>
  <string name="msg_10_30_am_11_0">10:30 AM - 11:00 AM</string>
  <string name="lbl_date">Date</string>
  <string name="msg_tickets_yayoi">Tickets : Yayoi Kusama Infinite love</string>
  <string name="lbl_nasr_city_cairo">Nasr city,cairo</string>
  <string name="msg_beyond_the_surf2">Beyond the Surface: Exploring Depth in Art
</string>
  <string name="msg_electronic_ente2">Electronic Entertainment Expo (E3)</string>
  <string name="lbl_upcoming">Upcoming</string>
  <string name="lbl_or_sign_up_with">Or Sign up with</string>
  <string name="msg_show_this_ticke">Show this ticket on the entrance</string>
  <string name="msg_don_t_have_an_a2">Don\u2019t have an account ? </string>
  <string name="lbl_500_egp">500 EGP</string>
  <string name="lbl_sort">Sort</string>
  <string name="msg_ticket_id_sh23">Ticket ID: SH23123ASD</string>
  <string name="msg_already_have_an2">Already have an account ? </string>
  <string name="msg_we_are_waiting">We are waiting for you at the event.
Check your email for confirmation details. You can also check your order status at tickets tab.</string>
  <string name="msg_cyberpunk_2077">Cyberpunk 2077 community gathering  </string>
  <string name="lbl_social4">SOCIAL</string>
  <string name="msg_emily_woo_zelle">Emily Woo Zeller</string>
  <string name="msg_already_have_an3">Already have an account ?</string>
  <string name="msg_select_payment">Select payment method</string>
  <string name="lbl_applepay">ApplePay</string>
  <string name="lbl_social2">social</string>
  <string name="lbl_cd_project_red">CD project red</string>
  <string name="lbl_social3">Social</string>
  <string name="msg_get_discount_34">Get Discount 34%, if you buy 2 tickets.</string>
  <string name="msg_electronic_ente">Electronic Entertainment Expo 2023</string>
  <string name="lbl_cost">Cost</string>
  <string name="lbl_231_le">231 LE</string>
  <string name="msg_organized_by_ya">Organized by YAYOI KUSAMA</string>
  <string name="lbl_time">Time</string>
  <string name="lbl_card_number">Card number</string>
  <string name="msg_expire_date_mm">Expire Date (MM.YY)</string>
  <string name="lbl_password">Password</string>
  <string name="lbl_mamma_mia">Mamma Mia</string>
  <string name="lbl_0116373383883">0116373383883</string>
  <string name="lbl_language">Language</string>
  <string name="lbl_tickets">Tickets</string>
  <string name="lbl_jan">Jan</string>
  <string name="lbl_my_profile">My Profile</string>
  <string name="lbl_personal_info">Personal info</string>
  <string name="lbl_person"> person</string>
  <string name="msg_10_00_am_10_3">10:00 AM - 10:30 AM: Registration and Networking
10:30 AM - 11:00 AM: Welcome and Introduction
11:00 AM - 12:00 PM: Panel Discussion: Exploring the Cyberpunk 2077 Universe</string>
  <string name="msg_chuo_ku_tokyo">Chuo-ku, Tokyo, Japan. The address is 1-6-7, Japan.</string>
  <string name="msg_sami_mohamed_al">Sami mohamed alnaggar</string>
  <string name="lbl_category">Category</string>
  <string name="lbl_23">23
</string>
  <string name="lbl_english">English</string>
  <string name="lbl_see_more">see more</string>
  <string name="lbl_age">Age</string>
  <string name="lbl_25">25</string>
  <string name="lbl_buy_ticket_180">Buy Ticket $180</string>
  <string name="msg_log_in_with_goo">Log in with Google</string>
  <string name="msg_welcome_to_osyn">Welcome to Osynda </string>
  <string name="msg_card_holder_nam">Card holder name</string>
  <string name="msg_current_locatio">Current location</string>
  <string name="lbl_categories">Categories</string>
  <string name="lbl_19_00_egp">19.00 EGP</string>
  <string name="lbl_event_schedule">Event schedule</string>
  <string name="lbl_total">Total</string>
  <string name="lbl_follow">Follow</string>
  <string name="msg_mon_feb_23_at_9">MON,FEB 23 AT 9 AM</string>
  <string name="lbl_setting">Setting</string>
  <string name="lbl_art_exhibition">Art exhibition</string>
  <string name="lbl_b05">B05</string>
  <string name="msg_organized_by_wa">Organized by warner bros</string>
  <string name="lbl_get_started">Get Started</string>
  <string name="lbl_11_09_1988">11/09/1988</string>
  <string name="lbl_yayoi_kusama">YAYOI KUSAMA</string>
  <string name="lbl_sign_up">Sign up </string>
  <string name="lbl_16">16
</string>
  <string name="msg_10_00_am_10_32">10:00 AM - 10:30 AM</string>
  <string name="lbl_sign_up2">Sign up</string>
  <string name="lbl_popular_events">Popular events</string>
  <string name="msg_mariamnabill022">mariamnabill022@gmail.com</string>
  <string name="msg_roger_clark_sta">Roger clark stand up comedy </string>
  <string name="msg_discover_the_ho">"Discover the hottest events: Concerts, festivals, workshops, parties, you name it! We've got it all."</string>
  <string name="lbl_art_exhibition2">ART EXHIBITION</string>
  <string name="msg_xxxx_xxxx_xxxx">xxxx xxxx xxxx xxxx</string>
  <string name="lbl_profile">profile</string>
  <string name="lbl">$</string>
  <string name="lbl_11_00_am">11:00 AM</string>
  <string name="msg_yayoi_kusama_i3">Yayoi Kusama: Infinite love</string>
  <string name="lbl_organizer">Organizer</string>
  <string name="msg_376836189231923">376836189231923791231237</string>
  <string name="msg_yayoi_kusama_i2">Yayoi Kusama: Infinite Love Member Previews</string>
  <string name="msg_samialnaggar32">samialnaggar32@gmail.com</string>
  <string name="msg_registration">: Registration and Networking
</string>
  <string name="msg_yayoi_kusama_i4">Yayoi Kusama: Infinite Love</string>
  <string name="lbl_save_card">Save card</string>
  <string name="msg_proceed_to_chec">Proceed to checkout</string>
  <string name="lbl_keanu_reeves">Keanu Reeves</string>
  <string name="lbl_23_feb">23
Feb</string>
  <string name="lbl_18_june">18 June</string>
  <string name="lbl_16_jan">16
Jan</string>
  <string name="lbl_search">Search</string>
  <string name="lbl_2">2</string>
  <string name="lbl_3_tickets">3 Tickets</string>
  <string name="lbl_3">3</string>
  <string name="msg_rogue_amendiare">Rogue Amendiares</string>
  <string name="lbl_art3">Art</string>
  <string name="lbl_art2">ART</string>
  <string name="msg_samimohamed23_g">samimohamed23@gmail.com</string>
  <string name="msg_american_expres">American Express</string>
  <string name="lbl_tickets2">tickets</string>
  <string name="lbl_my_events">My Events</string>
  <string name="lbl_04">04
</string>
  <string name="lbl_payment_method">Payment method</string>
  <string name="lbl_search_events">Search events</string>
  <string name="msg_visa_masterca">Visa / MasterCard</string>
  <string name="msg_october_14_202">October 14, 2023\u2013September 7, 2024</string>
  <string name="lbl_login">Login</string>
  <string name="lbl_paypal">PayPal</string>
  <string name="lbl_booked">Booked</string>
  <string name="lbl_25_person">25$/ person</string>
  <string name="msg_11_00_am_12_0">11:00 AM - 12:00 PM</string>
  <string name="lbl_your_name">Your Name</string>
  <string name="lbl_messages">Messages</string>
  <string name="msg_the_social_expe">The Social Experiment: Connecting in a Digital World</string>
  <string name="msg_from_concerts_a">"From concerts and festivals to workshops and parties, we've got something for everyone."</string>
  <string name="msg_save_as_primary">Save as primary card</string>
  <string name="msg_you_are_success">You are successfully paid
 for your event</string>
  <string name="msg_new_cairo_egy">New Cairo , Egypt</string>
  <string name="lbl_carla_tassara">Carla Tassara</string>
  <string name="lbl_signup2">Signup</string>
  <string name="lbl_help">Help</string>
  <string name="lbl_xx_xx">xx/xx</string>
  <string name="lbl_address">Address</string>
  <string name="lbl_see_more2">See more</string>
  <string name="msg_1_billion_follo">1 billion follower summit </string>
  <string name="lbl_cvv_cvc">CVV/CVC</string>
  <string name="lbl_04_jun">04
Jun</string>
  <string name="msg_welcome_and_i">: Welcome and Introduction
</string>
  <string name="lbl_full_name">Full Name</string>
  <string name="lbl_519_00_egp">519.00 EGP</string>
  <string name="msg_what_is_lorem_i">What is Lorem Ipsum?</string>
</resources>
