<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="cinemasRowModel" type="com.osynda.app.modules.cinemas.data.model.CinemasRowModel"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearColumnprice"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" android:orientation="vertical">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowprice"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_7pxh"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <TextView android:id="@+id/txtPrice"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.84" android:layout_width="0dp"
                android:text="@{cinemasRowModel.txtPrice}"
                style="@style/txtPoppinssemibold10" tools:text="@string/msg_yayoi_kusama_i"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtFrame355"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_18pxv"
                android:layout_marginStart="@dimen/_25pxh"
                android:layout_weight="0.16" android:layout_width="0dp"
                android:paddingBottom="@dimen/_1pxv"
                android:paddingEnd="@dimen/_7pxh"
                android:paddingStart="@dimen/_5pxh"
                android:paddingTop="@dimen/_1pxv"
                android:singleLine="true"
                android:text="@{cinemasRowModel.txtFrame355}"
                style="@style/txtSolidRoundedOutline_1" tools:text="@string/lbl_art2"/>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowtime"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_3pxv"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <TextView android:ellipsize="end" android:id="@+id/txtTime"
                android:layout_height="wrap_content"
                android:layout_weight="0.48" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{cinemasRowModel.txtTime}"
                style="@style/txtPoppinsregular6" tools:text="@string/msg_mon_feb_23_at_9"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLanguage"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginStart="@dimen/_23pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.52" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{cinemasRowModel.txtLanguage}"
                style="@style/txtPoppinslight6" tools:text="@string/msg_location_nasr"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRowellipsenine"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4pxv"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <ImageView android:id="@+id/imageEllipseNine"
                android:layout_height="@dimen/_17pxh"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="@dimen/_17pxh"
                android:scaleType="centerCrop" circular="@{true}"
                imageRes="@{@drawable/img_ellipse9}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_ellipse9"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtOrganizedbyYA"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_3pxv"
                android:layout_marginStart="@dimen/_5pxh"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_weight="0.63" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{cinemasRowModel.txtOrganizedbyYA}"
                style="@style/txtPoppinsregular7_1" tools:text="@string/msg_organized_by_ya"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtPriceOne"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_23pxh"
                android:layout_weight="0.26" android:layout_width="0dp"
                android:paddingBottom="@dimen/_2pxv"
                android:paddingEnd="@dimen/_6pxh"
                android:paddingStart="@dimen/_5pxh"
                android:paddingTop="@dimen/_3pxv"
                android:singleLine="true"
                android:text="@{cinemasRowModel.txtPriceOne}"
                style="@style/txtSolidRounded_1" tools:text="@string/lbl_35_00"/>
        </LinearLayout>
    </LinearLayout>
</layout>
