<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="paymentMethodThreeVM" type="com.osynda.app.modules.paymentmethodthree.data.viewmodel.PaymentMethodThreeVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearPaymentmethod"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowarrowdown"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageButton
                    android:background="@drawable/rectangle_border_gray_800_radius_16_095"
                    android:id="@+id/btnArrowdown"
                    android:layout_height="@dimen/_32pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_width="@dimen/_32pxh"
                    android:paddingHorizontal="@dimen/_10pxh"
                    android:paddingVertical="@dimen/_10pxv"
                    android:scaleType="fitCenter"
                    android:src="@drawable/img_arrowdown_gray_800_32x32" tools:ignore="ContentDescription"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtVisaMasterCa"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_17pxh"
                    android:layout_weight="0.87"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{paymentMethodThreeVM.paymentMethodThreeModel.txtVisaMasterCa}"
                    style="@style/txtPoppinsregular24" tools:text="@string/msg_visa_masterca"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <TextView android:ellipsize="end"
            android:id="@+id/txtCardholdernam"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_33pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{paymentMethodThreeVM.paymentMethodThreeModel.txtCardholdernam}"
            style="@style/txtPoppinsregular16_4" tools:text="@string/msg_card_holder_nam"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_black_900_44_radius_10"
            android:ellipsize="end"
            android:hint="@string/lbl_mariam_nabil"
            android:id="@+id/etFrame427" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_25pxh"
            android:paddingTop="@dimen/_12pxv" android:singleLine="true"
            android:text="@={paymentMethodThreeVM.paymentMethodThreeModel.etFrame427Value}"
            android:textColorHint="@color/black_900_7f"
            style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtCardnumber"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_29pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{paymentMethodThreeVM.paymentMethodThreeModel.txtCardnumber}"
            style="@style/txtPoppinsregular16_4" tools:text="@string/lbl_card_number"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_black_900_44_radius_10"
            android:ellipsize="end"
            android:hint="@string/msg_xxxx_xxxx_xxxx"
            android:id="@+id/etFrame428" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_21pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@={paymentMethodThreeVM.paymentMethodThreeModel.etFrame428Value}"
            android:textColorHint="@color/black_900_7f"
            style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
        <LinearLayout android:id="@+id/linearRowexpiredatemm"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_29pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnexpiredatemm"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.5" android:layout_width="0dp" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtExpireDateMM"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{paymentMethodThreeVM.paymentMethodThreeModel.txtExpireDateMM}"
                    style="@style/txtPoppinsregular16_4" tools:text="@string/msg_expire_date_mm"/>
                <EditText
                    android:background="@drawable/rectangle_bg_white_a700_border_black_900_44_radius_10"
                    android:ellipsize="end"
                    android:hint="@string/lbl_xx_xx"
                    android:id="@+id/etFrame563"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_14pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_19pxh"
                    android:paddingTop="@dimen/_13pxv"
                    android:singleLine="true"
                    android:text="@={paymentMethodThreeVM.paymentMethodThreeModel.etFrame563Value}"
                    android:textColorHint="@color/black_900_7f"
                    style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumncvvcvc"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.5" android:layout_width="0dp" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtCVVCVC"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{paymentMethodThreeVM.paymentMethodThreeModel.txtCVVCVC}"
                    style="@style/txtPoppinsregular16_4" tools:text="@string/lbl_cvv_cvc"/>
                <EditText
                    android:background="@drawable/rectangle_bg_white_a700_border_black_900_44_radius_10"
                    android:ellipsize="end"
                    android:hint="@string/lbl_xxx"
                    android:id="@+id/etFrame564"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_12pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_19pxh"
                    android:paddingTop="@dimen/_15pxv"
                    android:singleLine="true"
                    android:text="@={paymentMethodThreeVM.paymentMethodThreeModel.etFrame564Value}"
                    android:textColorHint="@color/black_900_7f"
                    style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
            </LinearLayout>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatCheckBox
            android:buttonTint="@color/black_900_5e"
            android:ellipsize="end" android:fontFamily="@font/poppins"
            android:id="@+id/checkBoxSaveasprimary"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_29pxv"
            android:layout_width="wrap_content"
            android:paddingStart="@dimen/_11pxh"
            android:paddingTop="@dimen/_1pxv" android:singleLine="true"
            android:text="@string/msg_save_as_primary"
            android:textColor="@color/black_900"
            android:textFontWeight="300"
            android:textSize="@dimen/_14pxh" android:textStyle="bold" tools:text="@string/msg_save_as_primary"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSaveCard"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_260pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@string/lbl_save_card"
            android:textAllCaps="false" style="@style/btnSolidRounded_4" tools:text="@string/lbl_save_card"/>
    </LinearLayout>
</layout>
